--- a/client/src/app/escola/lista-escolas/lista-escolas.component.html
+++ b/client/src/app/escola/lista-escolas/lista-escolas.component.html
@@ -1,23 +1,24 @@
-<div *ngIf="escolas" class="table-center">
-    <table>
+<div *ngIf="escolas" class="col-md-12 user-container">
+    <h2 style="margin: auto"> Lista de Escolas</h2>
+    <button class="btn btn-success" (click)="criarEscola()"> Cadastrar Escola</button>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Nome</th>
                 <th>Endereço</th>
-                <th>Turmas</th>
-                <th>Alterar</th>
-                <th>Apagar</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor='let escola of escolas'>
+            <tr *ngFor="let escola of escolas">
                 <td>{{escola?.id}}</td>
                 <td>{{escola?.nome}}</td>
                 <td>{{escola?.endereco}}</td>
-                <td><a [routerLink]="['/escola', escola.id, 'turma']" routerLinkActive="active">Ver Turmas</a></td>
-                <td><button>Alterar</button></td>
-                <td><button>Apagar</button></td>
+                <td>
+                    <a href="/escola/{{escola?.id}}/turma">Ver turmas</a>
+                    <button class="btn btn-outline-danger" (click)="apagarEscola(user)" style="margin-left: 20px;">Apagar</button>
+                    <button class="btn btn-warning" (click)="EditarEscola(user)" style="margin-left: 20px;">Editar</button>
+                </td>
             </tr>
         </tbody>
     </table>
