fechando por hj

--- a/client/src/app/escola/criar-escola/criar-escola.component.html
+++ b/client/src/app/escola/criar-escola/criar-escola.component.html
@@ -12,6 +12,6 @@
         </div>
 
         <button class="btn btn-success">Adicionar</button>
-        <button class="btn btn-danger" style="margin-left:10px;">Cancelar</button>
+        <button class="btn btn-danger" style="margin-left:10px;" (click)="cancelar()">Cancelar</button>
     </form>
 </div>
