--- a/client/src/app/escola/editar-escola/editar-escola.component.html
+++ b/client/src/app/escola/editar-escola/editar-escola.component.html
@@ -1,1 +1,21 @@
-<p>editar-escola works!</p>
+<div class="col-md-12 user-container" style="margin-bottom: 20px;">
+    <h2 class="text-center">Editar Escola</h2>
+    <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
+        <div hidden>
+            <input type="text" formControlName="id" class="form-control" id="id">
+        </div>
+
+        <div class="form-group">
+            <label for="nome">Nome:</label>
+            <input type="text" formControlName="nome" placeholder="Nome da escola" class="form-control" id="nome">
+        </div>
+
+        <div class="form-group">
+            <label for="endereco">Endereço:</label>
+            <input formControlName="endereco" placeholder="Endereço da escola" class="form-control" id="endereco">
+        </div>
+
+        <button class="btn btn-success">Alterar</button>
+        <button class="btn btn-danger" style="margin-left:10px;" (click)="cancelar()">Cancelar</button>
+    </form>
+</div>
