--- a/client/src/app/escola/editar-escola/editar-escola.component.html
+++ b/client/src/app/escola/editar-escola/editar-escola.component.html
@@ -1,21 +1,33 @@
 <div class="col-md-12 user-container" style="margin-bottom: 20px;">
-    <h2 class="text-center">Editar Escola</h2>
+    <div style="margin-top: 5px;">
+        <div class="row">
+            <div class="col-sm-10 col-12">
+                <h3>Editar Escola</h3>
+            </div>
+            <div class="col-sm-2 col-12">
+                <button type="button" class="btn btn-outline-primary pull-right" (click)="adicionarTurma()">Adicionar Turma</button>
+            </div>
+        </div>
+    </div>
     <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
         <div hidden>
-            <input type="text" formControlName="id" class="form-control" id="id">
+            <input type="text" formControlName="id" value="{{escola?.id}}" class="form-control" id="id">
+            <input type="text" formControlName="turmas" value="{{escola?.turmas}}" class="form-control" id="turmas">
         </div>
 
         <div class="form-group">
             <label for="nome">Nome:</label>
-            <input type="text" formControlName="nome" placeholder="Nome da escola" class="form-control" id="nome">
+            <input type="text" formControlName="nome" value="{{escola?.nome}}" placeholder="Nome da escola" class="form-control" id="nome">
         </div>
 
         <div class="form-group">
             <label for="endereco">Endereço:</label>
-            <input formControlName="endereco" placeholder="Endereço da escola" class="form-control" id="endereco">
+            <input type="text" formControlName="endereco" value="{{escola?.endereco}}" placeholder="Endereço da escola" class="form-control" id="endereco">
         </div>
 
-        <button class="btn btn-success">Alterar</button>
-        <button class="btn btn-danger" style="margin-left:10px;" (click)="cancelar()">Cancelar</button>
+        <div class="text-center">
+            <button class="btn btn-success">Alterar</button>
+            <button class="btn btn-danger" style="margin-left:30px;" (click)="cancelar()">Cancelar</button>
+        </div>
     </form>
 </div>
