--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand brand-custom" href="">Cadastro de Escolas</a>
+    <a class="navbar-brand brand-custom" style="font-size: x-large;" href="">Cadastro de Escolas</a>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link login-custom" href="/escola">Escolas<span class="sr-only">(current)</span></a>
+                <button [routerLink]="['/escola']" routerLinkActive="active" class="btn btn-secondary my-2 my-sm-0">Exibir Escolas</button>
             </li>
         </ul>
     </div>
