padronizando páginas anteriores

--- a/client/src/app/escola/criar-escola/criar-escola.component.html
+++ b/client/src/app/escola/criar-escola/criar-escola.component.html
@@ -10,8 +10,9 @@
             <label for="endereco">Endereço:</label>
             <input formControlName="endereco" placeholder="Endereço da escola" class="form-control" id="endereco">
         </div>
-
-        <button class="btn btn-success">Adicionar</button>
-        <button class="btn btn-danger" style="margin-left:10px;" (click)="cancelar()">Cancelar</button>
+        <div class="text-center">
+            <button class="btn btn-success">Adicionar</button>
+            <button class="btn btn-danger" style="margin-left:10px;" (click)="cancelar()">Cancelar</button>
+        </div>
     </form>
 </div>
