--- a/client/src/app/escola/lista-turmas/lista-turmas.component.html
+++ b/client/src/app/escola/lista-turmas/lista-turmas.component.html
@@ -1,7 +1,15 @@
 <div *ngIf="turmas" class="col-md-12 user-container">
-    <h2 style="margin: auto"> Turmas da escola {{escola.nome}}</h2>
-    <button class="btn btn-success"> Cadastrar Turma</button>
-    <table class="table table-striped">
+    <div style="margin-top: 5px;">
+        <div class="row">
+            <div class="col-sm-10 col-12">
+                <h2>Turmas da escola {{escola.nome}}</h2>
+            </div>
+            <div class="col-sm-2 col-12">
+                <button type="button" (click)="adicionarTurma()" class="btn btn-outline-primary pull-right">Cadastrar Turma</button>
+            </div>
+        </div>
+    </div>
+    <table *ngIf="turmas && turmas.length > 0" class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
@@ -16,7 +24,7 @@
                 <td>{{turma?.escolaId}}</td>
                 <td>{{turma?.numero}}</td>
                 <td>{{turma?.numeroAlunos}}</td>
-                <td>
+                <td style="text-align: right;">
                     <button class="btn btn-outline-danger">Apagar</button>
                     <button class="btn btn-warning" style="margin-left: 20px;">Editar</button>
                 </td>
