--- a/client/src/app/escola/lista-turmas/lista-turmas.component.html
+++ b/client/src/app/escola/lista-turmas/lista-turmas.component.html
@@ -25,7 +25,7 @@
                 <td>{{turma?.numero}}</td>
                 <td>{{turma?.numeroAlunos}}</td>
                 <td style="text-align: right;">
-                    <button class="btn btn-outline-danger">Apagar</button>
+                    <button class="btn btn-outline-danger" (click)="apagarTurma(turma?.id)">Apagar</button>
                     <button class="btn btn-warning" style="margin-left: 20px;">Editar</button>
                 </td>
             </tr>
